Add pre-commit config
* .pre-commit-config.yaml
* README updated
* poetry update
* homepage added into toml file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "squiral"
 version = "0.1.2"
 description = "squiral - square spiral"
 authors = ["SADIK KUZU <sadikkuzu@hotmail.com>"]
+homepage = "https://github.com/sadikkuzu/squiral"
 readme = "README.md"
 license = "MIT"
 
