pytest color yes

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,4 +36,4 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
     - name: Test with pytest
       run: |
-        pytest -v --cov=squiral --cov-report term-missing tests/
+        pytest -v --color=yes --cov=squiral --cov-report term-missing tests/
