--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,14 +26,17 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest pytest-cov
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install poetry
+        poetry install
     - name: Lint with flake8
       run: |
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
     - name: Test with pytest
       run: |
-        pytest -v --color=yes --cov=squiral --cov-report term-missing tests/
+        poetry run pytest -v --color=yes --cov=squiral --cov-report term-missing tests/
+    - name: Test with pre-commit
+      run: |
+        poetry run pre-commit run --all-files
