--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.7"
 pytest = "^6.2"
 pytest-cov = "^2.11.1"
 flake8 = "^3.9.0"
+pre-commit = "^2.16.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
