--- a/.gitignore
+++ b/.gitignore
@@ -378,4 +378,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,linux,macos,pycharm+all,python,sublimetext,vim,vscode
 
-# Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+# Custom rules (everything added below won't be overridden by 'Generate .gitignore File' if you use 'Update' option)
