--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,7 @@ repos:
     hooks:
     -   id: add-trailing-comma
         args: [--py36-plus]
+-   repo: https://github.com/crate-ci/typos
+    rev: v1.10.2
+    hooks:
+      - id: typos
