--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ pytest-cov = "^3.0.0"
 flake8 = "^4.0.1"
 pre-commit = "^2.16.0"
 
+[tool.poetry.scripts]
+squiral = "squiral.main:main_cli"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
