--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,15 @@ authors = ["SADIK KUZU <sadikkuzu@hotmail.com>"]
 homepage = "https://github.com/sadikkuzu/squiral"
 readme = "README.md"
 license = "MIT"
+packages = [{include = "squiral"}]
 
 [tool.poetry.dependencies]
 python = "^3.7"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.1.1"
 pytest-cov = "^3.0.0"
-flake8 = "^4.0.1"
+flake8 = "^5.0.4"
 pre-commit = "^2.16.0"
 
 [tool.poetry.scripts]
