--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,9 +36,9 @@ jobs:
         poetry install
     - name: Lint with flake8
       run: |
-        poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        poetry run flake8 . --select=E9,F63,F7,F82 --show-source
         # stop the build if there are Python syntax errors or undefined names
-        poetry run flake8 . --count --exit-zero --statistics
+        poetry run flake8 . --exit-zero
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
     - name: Test with pytest
       run: |
