--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     -   id: check-merge-conflict
     -   id: check-toml
 -   repo: https://github.com/crate-ci/typos
-    rev: dictgen-v0.2.4
+    rev: v1.12.8
     hooks:
       - id: typos
 -   repo: https://github.com/asottile/reorder_python_imports
