--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,14 +32,17 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools
-        pip install poetry
+        pip install poetry flake8 pre-commit
         poetry install
     - name: Lint with flake8
       run: |
-        poetry run flake8 . --select=E9,F63,F7,F82 --show-source
+        flake8 . --select=E9,F63,F7,F82 --show-source
         # stop the build if there are Python syntax errors or undefined names
-        poetry run flake8 . --exit-zero
+        flake8 . --exit-zero
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
     - name: Test with pytest
       run: |
         poetry run pytest --cov=squiral --cov-report term-missing tests/
+    - name: Run pre-commit
+      run: |
+        pre-commit run --all-files
