--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,14 +25,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: set PY
       run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
-    - uses: actions/cache@v3
-      with:
-        path: ~/.cache/pre-commit
-        key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools
-        pip install poetry flake8 pre-commit
+        pip install poetry flake8
         poetry install
     - name: Lint with flake8
       run: |
@@ -43,6 +39,3 @@ jobs:
     - name: Test with pytest
       run: |
         poetry run pytest --cov=squiral --cov-report term-missing tests/
-    - name: Run pre-commit
-      run: |
-        pre-commit run --all-files
