--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -11,9 +11,12 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.11'
-    - name: Install requirements
-      run: pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip setuptools
+        pip install poetry
+        poetry install
     - name: Run tests and collect coverage
-      run: pytest --cov=. --cov-report=term-missing --cov-report=xml
+      run: poetry run pytest --cov=. --cov-report=term-missing --cov-report=xml
     - name: Upload coverage reports to Codecov with GitHub Action
       uses: codecov/codecov-action@v3
