--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -20,3 +20,5 @@ jobs:
       run: poetry run pytest --cov=. --cov-report=term-missing --cov-report=xml
     - name: Upload coverage reports to Codecov with GitHub Action
       uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
