--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     -   id: check-merge-conflict
     -   id: check-toml
 -   repo: https://github.com/crate-ci/typos
-    rev: typos-dict-v0.11.35
+    rev: v1.28.1
     hooks:
       - id: typos
 -   repo: https://github.com/asottile/add-trailing-comma
