--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     -   id: check-docstring-first
     -   id: check-merge-conflict
     -   id: check-toml
--   repo: https://github.com/crate-ci/typos
+-   repo: https://github.com/adhtruong/typos
     rev: v1
     hooks:
       - id: typos
